syntax = "proto3";

option csharp_namespace = "notification";

package notification;

// The greeting service definition.
service Notification {
  // Sends a greeting
  rpc NotifyEvent (NotifyRequest) returns (NotifyReply);
}

// The request message containing the user's name.
message NotifyRequest {
  string eventName = 1;
  string parameterName = 2;
  int32 parameterValue = 3;
}

// The response message containing the greetings.
message NotifyReply {
  string message = 1;
}
